name:                CS4032-API
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/esjmb/use-haskell-api#readme
license:             BSD3
license-file:        LICENSE
author:              Stephen Barrett
maintainer:          Stephen.Barrett@tcd.ie
copyright:           2016
category:            test
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     SecurityAPI
                     , ClientProxyAPI
                     , DirectoryAPI
  build-depends:       base >= 4.7 && < 5
                     , servant
                     , servant-client
                     , servant-server
                     , bson-generic
                     , aeson
                     , text
                     , http-client
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/simonq80/CS4032-API
